--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "express": "^4.18.2",
     "locate-chrome": "^0.1.1",
     "puppeteer": "^19.5.2"
+  },
+  "devDependencies": {
+    "babel-loader": "^9.1.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
-
